# collective_phase_amplitude

./: .envrc  .gitignore  .ignore  LICENSE  Makefile  README.md  matplotlibrc  pyproject.toml
.zed/: settings.json
config/: constants.py  oscillator_constants.py  paths.py
config/simulation_parameters/: fitz_random.py  fitz_ring.py  fitz_star.py
oscillators/: fitz_element.py  fitz_network.py  van_der_pol.py  van_der_pol_scaled.py  willamowski_rossler.py
plotting_scripts/: graph_animation.py  isf_simulation.py  phase_and_amp.py  phase_and_amp_near_state.py
plotting_scripts/iutam_plots/: floquet.py  graph_plot_iutam.py  star_diff.py
plotting_scripts/paper_plots/: floquet_vectors.py  floquet_vectors_merge.py  graph.py  graph_merged.py  random_diff.py  ring_diff.py
plotting_scripts/paper_plots/utils/: diff_plot.py  diff_plot_iutam.py
plotting_scripts/thesis_plots/: random_diff.py  ring_diff.py
presentation_ploting_scripts/: gamma_func.py  inphase_antiphase.py  steep_gamma.py
simulation_scripts/amplitude_optimization/: fitz_random.py  fitz_ring.py  fitz_star.py  van_scaled.py
simulation_scripts/feedback/: fitz_random.py  fitz_ring.py  fitz_star.py  van_scaled.py
simulation_scripts/floquet_scripts/: fitz_element.py  fitz_random.py  fitz_ring.py  fitz_star.py  van_scaled.py  willamowski.py
simulation_scripts/simple_optimization/: fitz_random.py  fitz_ring.py  fitz_star.py  van_scaled.py
simulation_scripts/sinusoid/: fitz_random.py  fitz_ring.py  fitz_star.py
solvers/: average_phase_diff.py  floquet.py  period_finder.py  phase_solver.py
solvers/control_algorithms/: feedback_method.py  optimal_entrainment_abstractor.py  phase_method.py  phase_method_amplitude.py
utils/: math_utils.py  timing.py
